# scenario-rs

./: .gitignore  .hintrc  Cargo.toml  LICENSE  README.md  TODO.md  config.json  deploy-rs-state.json  example-scenario.json  example-scenario.toml  example-scenario.yaml  scenario-rs.code-workspace
.github/workflows/: scenario-rs.yml
cli/: Cargo.toml
cli/src/: main.rs  trace.rs
core/: Cargo.toml
core/src/: config.rs  data.rs  error.rs  lib.rs  mock.rs  scenario.rs  session.rs  trace.rs  utils.rs
core/src/config/: credentials.rs  execute.rs  mod.rs  on_fail.rs  scenario.rs  server.rs  step.rs  steps.rs  task.rs  tasks.rs  variables.rs
core/src/config/variables/: defined.rs  required.rs
core/src/scenario/: credentials.rs  errors.rs  events.rs  execute.rs  lifecycle.rs  mod.rs  on_fail.rs  on_fail_step.rs  on_fail_steps.rs  remote_sudo.rs  rollback.rs  server.rs  sftp_copy.rs  step.rs  steps.rs  task.rs  tasks.rs  utils.rs  variables.rs
core/src/scenario/variables/: defined.rs  required.rs  resolved.rs
example_configs/: deploy-scenario.toml  deploy-service-one.toml  deploy-service-two.toml  example-scenario.toml
goal_config_structure/: deploy-scenario.toml  deploy-service-one.toml  deploy-service-two.toml
gui/: Cargo.toml  angular.json  package-lock.json  package.json
gui-egui/: Cargo.toml
gui-egui/src/: lifecycle.rs  main.rs  ui.rs
gui/src/: app.rs  deploy.rs  index.html  lifecycle.rs  main.rs  scenario.rs  styles.scss  ui.rs
gui/src-tauri/: Cargo.toml  Tauri.toml  scenario-app-state.json  tauri.conf.json
gui/src-tauri/capabilities/: desktop-capability.toml  migrated.json
gui/src-tauri/src/: app.rs  app_event.rs  commands.rs  event.rs  event_handler.rs  lifecycle.rs  logging.rs  main.rs  scenario_event.rs  shared.rs  utils.rs
gui/src-tauri/src/trace/: event_handler.rs  frontend_event_handler.rs  frontend_layer.rs  mod.rs
gui/src-tauri/src/trace/layers/: app.rs  app_layer.rs  mod.rs  scenario.rs  scenario_layer.rs
gui/src-tauri/src/trace/visitors/: app_visitor.rs  mod.rs
gui/src/app/: app.component.html  app.component.scss  app.component.ts  auto-scroll.directive.ts  no-right-click.directive.ts
gui/src/app/execution-progress/: execution-progress.component.html  execution-progress.component.scss  execution-progress.component.spec.ts  execution-progress.component.ts
gui/src/app/models/: enums.ts  scenario.model.ts  step-state.model.ts
gui/src/app/shared/expandable/: expandable.component.html  expandable.component.scss  expandable.component.ts
gui/src/app/shared/expandable/expandable-title/: expandable-title.component.html  expandable-title.component.scss  expandable-title.component.ts
gui/src/app/shared/info-block/: info-block.component.html  info-block.component.scss  info-block.component.ts
gui/src/app/shared/tooltip/: tooltip.component.scss  tooltip.component.ts
gui/src/app/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
gui/src/app/titlebar/: titlebar.component.html  titlebar.component.scss  titlebar.component.ts
scenario-rs/: Cargo.toml
scenario-rs-gui/: angular.json  package.json  scenario-rs.code-workspace
scenario-rs-gui/src-tauri/: Cargo.toml  scenario-app-state.json  tauri.conf.json
scenario-rs-gui/src-tauri/src/: commands.rs  lifecycle.rs  shared.rs
scenario-rs-gui/src/app/: app.component.css
scenario-rs/src/: config.rs  lib.rs
scenario-rs/src/scenario/: remote_sudo.rs  step.rs  steps.rs  tasks.rs  utils.rs
src/: data.rs  lib.rs  main.rs
