[package]
name = "deploy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["cargo"] }
chrono = "0.4.38"
regex = "1.10.6"
ssh2 = "0.9.4"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"