[package]
name = "cli"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "scenario-rs-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
scenario-rs = { package = "core", path = "../core" }
colored = "3.0.0"
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indicatif = "0.17.11"
