[package]
name = "scenario-rs-cli"
version = "0.5.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "scenario-rs-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
scenario-rs = { package = "scenario-rs-core", path = "../core" }
colored = "3.0.0"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indicatif = "0.17.11"
