[package]
name = "scenario-rs-core"
version = "0.5.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0.12"
regex = "1.11.1"
ssh2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
toml = "0.8.20"
libc = "0.2"
tracing = { version = "0.1.41", features = ["attributes"] }
