[package]
name = "scenario-rs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
thiserror = "2.0.12"
regex = "1.11.1"
ssh2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
toml = "0.8.22"
libc = "0.2"
tracing = { version = "0.1.41", features = ["attributes"] }
