[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scenario-rs-gui"
path = "src/main.rs"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
scenario-rs = { package = "core", path = "../core" }
colored = "2.0.4"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui-file-dialog = "0.6.0"
catppuccin-egui = { version = "5.2.0", default-features = false, features = ["egui28"] }
