[package]
name = "scenario-rs-gui"
version = "0.5.2"
description = "Rust SSH automation tool"
authors = ["st4s1k"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scenario-rs = { package = "scenario-rs-core", path = "../../core" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
